# game_of_life

./: Cargo.toml  README.md  debug_test.rs  default.txt  hello_world.txt
src/: lib.rs  main.rs
src/benchmark/: metrics.rs  mod.rs  suite.rs
src/engines/: mod.rs  naive.rs  ultimate.rs
src/grid/: mod.rs  standard.rs
