[package]
name = "game_of_life"
version = "0.1.0"
edition = "2021"

[dependencies]
rayon = "1.10.0"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true
debug = false

[profile.bench]
inherits = "release"
debug = true

[lib]
name = "game_of_life"
path = "src/lib.rs"